--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@ body {
 }
 
 .button {
+    display: inline-block;
+    box-sizing: border-box;
     padding: 10px 10px;
     background-color: #2D54E2;
     border: 0;
@@ -56,9 +58,18 @@ body {
     font-weight: 500;
     line-height: 17px;
     color: #fff;
+    text-decoration: none;
+    text-align: center;
 
 }
 
+.section-title {
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 46px;
+
+    margin: 0;
+}
 
 .main-header {
     padding: 30px 0;
@@ -163,6 +174,38 @@ body {
 }
 
 .promo {
-    margin-top: 30px;
+    padding: 30px 0;
+    position: relative;
+    height: 500px;
+}
 
+.promo img {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    z-index: -1;
+}
+
+.promo-block {
+    width: 445px;
+    margin: 60px 0 0 95px;
+    padding: 65px 64px;
+    box-sizing: border-box;
+
+    background-color: #fff;
+}
+
+.promo-title {
+    margin-bottom: 10px;
+}
+
+.promo-block p {
+    margin: 0 0 40px;
+}
+
+.promo-block .button {
+    width: 171px;
+
+    font-size: 18px;
+    line-height: 23px;
 }
