--- a/css/style.css
+++ b/css/style.css
@@ -174,9 +174,8 @@ body {
 }
 
 .promo {
-    padding: 30px 0;
+    padding: 86px 0 100px 95px;
     position: relative;
-    height: 500px;
 }
 
 .promo img {
@@ -188,7 +187,6 @@ body {
 
 .promo-block {
     width: 445px;
-    margin: 60px 0 0 95px;
     padding: 65px 64px;
     box-sizing: border-box;
 
@@ -208,4 +206,59 @@ body {
 
     font-size: 18px;
     line-height: 23px;
+}
+
+.works {
+    padding: 120px 0 500px;
+}
+
+.works-wrapper {
+    display: flex;
+}
+
+.works-text-column {
+    width: 380px;
+    margin-right: 65px;
+}
+
+.works-title {
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+.works-text-column p {
+    margin: 0 0 40px;
+}
+
+.works-text-column .button {
+    width: 210px;
+
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 23px;
+}
+
+.works-img-column {
+    width: 665px;
+}
+
+.works-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    max-height: 362px;
+}
+
+.works-item:not(:last-child) {
+    margin-bottom: 30px;
+    margin-right: 30px;
+}
+
+.works-item img {
+    display: flex;
 }
