--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ body {
 .main-header {
     padding: 30px 0;
     box-shadow: 0 4px 10px 0 rgba(3, 10, 35, 0.06);
+    background-color: #fff;
 
     font-size: 16px;
     line-height: 20px;
@@ -91,6 +92,7 @@ body {
     justify-content: space-between;
 
     padding-bottom: 30px;
+    background-color: #fff;
 }
 
 .search-form {
@@ -261,4 +263,23 @@ body {
 
 .works-item img {
     display: flex;
+}
+
+.header-sticky {
+    position: fixed;
+    left: 0;
+    right: 0;
+    width: 100%;
+    top: 0;
+    z-index: 10;
+}
+
+.header-sticky + main {
+    margin-top: 123px;
+}
+
+.menu-list {
+    position: relative;
+    margin-top: -50px;
+    z-index: -1;
 }
